2015-10-01  Stipe Tolj  <stolj at kannel.org>
    * gw/sms.[ch]: incubate function sms_charset_processing() into module.
    * gw/smsbox.c: removed charset_processing().
    * gw/smsc/smsc_http.c: fix missing 'charset' processing for type kannel
      when receiving MOs.

2015-09-25  Stipe Tolj  <stolj at kannel.org>
    * utils/mtbatch.c: add option -x to disallow injection of smsbox-id to MT
      messages, in order to let normal smsbox connection handle DLRs.
      
2015-08-04 Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.c: added support for chained certificates.

2015-07-20  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr.c: add the original msg DLR bitmask to the meta-data of the DLR, 
      allowing smsbox applications to retrieve this information on-the-fly
      without the need to do local storage/retrieval.
    * gw/meta_data.h: define the macros for the DLR bitmask of the orig msg.
    
2015-07-13 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_store.[ch], gw/bb_store_file.c, gw/bb_store_redis.c, gw/bb_store_spool.c:
      Applied patch that fixes store file race condition by status request. Additionally
      this patch removes status from each of store and add it to bb_store to abstract and
      simplify status handling in store.

2015-07-01  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add documentation for escape code %N for DLR
      notification text.
    * gw/bb_alog.c: implement %N escape code for 'access-log-format' pattern.
    
2015-06-24 Alexander Malysh <amalysh at kannel.org>
    * configure.in, configure: fixed library search path order issue on OSX with
      MacPorts installed where iconv library was not found for linking.

2015-06-24 Alexander Malysh <amalysh at kannel.org>
    * utils/mtbatch.1: fixed bad formatting. This fixes #728.
      Thanks to Kalle Niemitalo. 

2015-05-18  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_smpp.c: harmonize the [data|deliver]_sm handling where we